<resources>
    <string name="app_name">上岸单词</string>
    <string name="btn_mem_words">背单词</string>
    <string name="btn_import_words">导入单词</string>
    <string name="btn_import_words_by_text">从文本导入</string>
    <string name="btn_prev_word">上一个</string>
    <string name="btn_next_word">下一个</string>
    <string name="btn_vague_word">模糊</string>
    <string name="btn_yesterday">昨天</string>
    <string name="btn_today">今天</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_search_word">搜单词</string>
    <string name="btn_memo">备忘录</string>
    <string name="btn_important">重点记忆</string>
    <string name="btn_study">学单词</string>
</resources>