<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_mem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="memWord"
        android:text="@string/btn_mem_words" />

    <Button
        android:id="@+id/btn_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="importWord"
        android:text="@string/btn_import_words" />

    <Button
        android:id="@+id/btn_import_by_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="importWordByText"
        android:text="@string/btn_import_words_by_text" />

</LinearLayout>