<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/purple_200"
        tools:text="23/49" />

    <TextView
        android:id="@+id/tv_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:onClick="voice"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:text="deliberate" />

    <TextView
        android:id="@+id/tv_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_word"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="20sp"
        tools:text="v.仔细考虑 a.故意的" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/btn_prev_word" />

        <Button
            android:id="@+id/btn_vague"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:text="@string/btn_vague_word"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/btn_next_word" />
    </LinearLayout>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="75dp"
        android:onClick="voice"
        android:src="@drawable/ic_sound" />

</RelativeLayout>